# voice-inference

./: .gitignore  pyproject.toml
configs/: sample.yaml
data/: B2_openai.jsonl  B2_openai_copy.jsonl
output/: generated_responses-32b.json  generated_responses-llama-3.1-8b.json  generated_responses.json
output/bush/: meta-llama_llama-3.1-8b-instruct_2025-08-19_14-16-10
output/bush/meta-llama_llama-3.1-70b-instruct_2025-08-19_15-24-22/: results.json
src/voice_inference/: config.py  infer.py  logging.py
src/voice_inference/scripts/: run.py
