[project]
name = "voice-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.47.0",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "vllm>=0.10.1",
]

[project.scripts]
infer = "voice_inference.scripts.run:main"
